[package]
name = "ros2monitor"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "libnodegraph"



[dependencies]
#rclrs = "0.3.1"
#rosidl_runtime_rs = "0.3"
#daemonize = "0.5.0"
json = "0.12.4"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = [ "derive" ] }
tokio = { version = "1.28.2", features = ["full"] }
tokio_schedule = "0.3.0"
spdlog-rs = "0.3"
log = "0.4.19"
env_logger = "0.10.0"
simple_logger = "4.2.0"
regex = "1.8.4"
sysinfo = "0.29.3"
pcap = "1.1.0"
pktparse = {version = "0.7.1", features = ["serde"]}
threadpool = "1.8.1"
tls-parser = "0.11.0"
num_cpus = "1.16.0"
dns-parser = "0.8.0"
#rtsp-types = "0.1.0"
wait-timeout = "0.2.0"
#xml-rpc = "0.0.12"
#xmlrpc = "0.15.1"
cc = "1.0.82"
ctrlc = "3.4.0"
hex = "0.4.3"
bitflags = "2.4.0"
grep-matcher = "0.1.6"
grep-regex = "0.1.11"
grep-searcher = "0.1.11"
futures = "0.3.28"
dns-lookup = "2.0.2"
single_value_channel = "1.2.2"
