<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>nodegraph</name>
    <version>0.0.1</version>
    <description>Node graph c api</description>
    <maintainer email="biblbroxxx@gmail.com">Kuchkov Aleksei</maintainer>

    <license>MPL-2.0</license>

    <author email="biblbroxxx@gmail.com">Kuchkov Aleksei</author>

    <buildtool_depend>ament_cmake_ros</buildtool_depend>

    <build_depend>rcl</build_depend>
    <build_depend>rclc</build_depend>
    <build_depend>rclcpp</build_depend>
    <build_depend>rclc_lifecycle</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>lifecycle_msgs</build_depend>
    <build_depend>example_interfaces</build_depend>

    <exec_depend>rcl</exec_depend>
    <exec_depend>rclc</exec_depend>
    <exec_depend>rclcpp</exec_depend>
    <exec_depend>rclc_lifecycle</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>lifecycle_msgs</exec_depend>
    <exec_depend>example_interfaces</exec_depend>

    <depend>rclc_parameter</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>